--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@changesets/action",
+  "name": "@cosm-changesets/action",
   "version": "1.4.1",
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.2",
-    "@changesets/cli": "^2.20.0",
-    "@changesets/write": "^0.1.6",
+    "@cosm-changesets/changelog-github": "^0.4.8",
+    "@cosm-changesets/cli": "^2.26.0",
+    "@cosm-changesets/write": "^0.2.3",
     "fixturez": "^1.1.0",
     "parcel": "^1.12.3",
     "prettier": "^2.0.5",
@@ -30,8 +30,8 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
-    "@changesets/pre": "^1.0.9",
-    "@changesets/read": "^0.5.3",
+    "@cosm-changesets/pre": "^1.0.14",
+    "@cosm-changesets/read": "^0.5.9",
     "@manypkg/get-packages": "^1.1.3",
     "@types/fs-extra": "^8.0.0",
     "@types/jest": "^24.0.18",
